# prog-distribuida-paralela

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  main.c  sequencial.c
summaries/: summary_hotspots_1.txt  summary_hotspots_16.txt  summary_hotspots_16_2.txt  summary_hotspots_1_2.txt  summary_hotspots_8_2.txt  summary_hpcperf_16.txt  summary_hpcperf_16_2.txt  summary_hpcperf_1_2.txt  summary_hpcperf_4_2.txt  summary_perf_1.txt  summary_perf_16.txt  summary_perf_16_2.txt  summary_perf_1_2.txt  summary_perf_8.txt  summary_perf_8_2.txt  summary_perf__seq.txt
trab1/: Makefile  main.c
trab1/inputs/: pfs.out  pfs_2.in
trab1/summaries/: summary_hotspots_4.txt  summary_hotspots_4_2.txt  summary_hotspots_8.txt  summary_hpcperf_1.txt  summary_hpcperf_4.txt  summary_hpcperf_8.txt  summary_hpcperf_8_2.txt  summary_perf_4.txt  summary_perf_4_2.txt
trab2/: README.md  mpi_coletiva.c  mpi_p2p_bloqueante.c  mpi_p2p_naobloqueante.c  script.py
